Revision history for P5built-ins

{{$NEXT}}

0.0.16  2018-05-03T22:31:55+02:00
    - forgot to add the dependency on getprotobyname, Travis++

0.0.15  2018-05-03T21:41:05+02:00
    - add support for endprotoent, getprotobyname, getprotobynumber,
      getprotoent, setprotoent
    - add support for forgotten setpwent and setgrent

0.0.14  2018-05-03T00:03:08+02:00
    - add support for endnetent, getnetbyaddr, getnetbyname, getnetent
      setnetent
    - add support for endservent, getservbyname, getservbyport, getservent
      setservent
    - add some missing exports to the documentation / tests:
      now at 72 functions

0.0.13  2018-05-01T16:02:49+02:00
    - add support for endgrent, endpwent,
      getgrent, getgrnam, getgrgid, getlogin, getpwent, getpwnam, getpwuid

0.0.12  2018-04-29T23:33:04+02:00
    - add support for localtime(), gmtime()

0.0.11  2018-04-29T12:12:24+02:00
    - add support for shift(), unshift()
    - add support for opendir, readdir, telldir, seekdir, rewinddir, closedir

0.0.10  2018-04-28T11:12:27+02:00
    - add support for fileno(), pop(), push(), readlink(), seek()

0.0.9  2018-04-26T13:02:35+02:00
    - forgot to add the dependency on chdir, Travis++

0.0.8  2018-04-25T23:20:49+02:00
    - add support for chdir()
    - add authority to the version information

0.0.7  2018-04-12T13:42:12+02:00
    - Follow App:Mi6's default Changes format
    - Update references to submodules to account for merges
    - Fix some documentation copy-pastos

0.0.6  2018-01-31T12:43:06+01:00
    - Add support for reverse()

0.0.5  2018-01-30T10:30:05+01:00
    - Add support for sleep()

0.0.4  2018-01-29T20:46:04+01:00
    - Add support for study()

0.0.3  2018-01-29T20:43:03+01:00
    - Add support for -r, -w, -x, -e, -f, -d, -z, -s, -l

0.0.2  2018-01-27T00:55:02+01:00
    - Add support for fc(), lc() and uc()

0.0.1  2018-01-26T23:53:01+01:00
    - Initial implementation.